[gd_scene load_steps=2 format=3 uid="uid://cuyj766dd510e"]

[ext_resource type="Script" path="res://anykey.gd" id="1_6pqgf"]

[node name="home" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="anykey" type="Node" parent="."]
script = ExtResource("1_6pqgf")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -307.0
offset_top = 33.0
offset_right = 307.0
offset_bottom = 129.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.835294, 0, 0, 1)
theme_override_font_sizes/font_size = 70
text = "摧毁设备！！！"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -333.0
offset_top = 89.0
offset_right = 329.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "时间：30秒"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -48.0
offset_right = 80.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "分数：?"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -158.0
offset_top = -155.0
offset_right = 148.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -574.0
offset_top = -325.0
offset_right = -51.0
offset_bottom = -270.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40

[node name="Button" type="Button" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.0
offset_top = 27.0
offset_right = 71.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 4
text = "开始"

[node name="Button2" type="Button" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -43.0
offset_top = 2.0
offset_right = -3.0
offset_bottom = 33.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 4
text = "关闭"

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[connection signal="button_down" from="Button" to="anykey" method="_on_button_button_down"]
[connection signal="button_down" from="Button2" to="anykey" method="_on_button_2_button_down"]
[connection signal="timeout" from="Timer" to="anykey" method="_on_timer_timeout"]
